feat: finalizados os testes da classe TravelService